welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:7: error: not found: value setColourBrosse
  setColourBrosse(c)
  ^