welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
  faireMotif1 (Color.RED)
  faireMotif2(Color.BLUE)
}

def faireMotif1( c: Color) {
  setColourBrosse(c)
  for (cpt1 <- 1 to 2) {

    avance()
  	baisseBrosse()
  leveBrosse()
  gauche()
  avance()
  gauche()
  }
  
}

def faireMotif2( c: Color) {
  setCouleurBrosse(c)
  for (cpt <- 1 to 2) {
    avance()
  	baisseBrosse()
  	leveBrosse()
  	avance()
  	gauche()
 	 avance()
		}
  }